--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola bienvenidos a este proyecto
             </h1>
+            <h2>
+                Les recuerdo tomar el curso de Github
+            </h2>
         </div>
     </body>
 </html>
